resolve mobile view flickering bug caused by cursor pointer

--- a/src/client/components/Card/Card.module.css
+++ b/src/client/components/Card/Card.module.css
@@ -60,7 +60,6 @@
 
 .flip-button {
   position: relative;
-  cursor: pointer;
   height: fit-content;
   margin: 2.5rem auto;
   padding: 0.5rem 2rem;
@@ -73,7 +72,9 @@
   z-index: 10;
   transition: transform 0.1s ease-in-out;
   transform-style: preserve-3d;
+  transform: translateY(0px) scale(1);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+  user-select: none;
 }
 
 .flip-animate {
